@@ -202,8 +202,8 @@
       <groupId>org.codehaus.jackson</groupId>
     </dependency>
     <dependency>
-      <groupId>javax.enterprise</groupId>
-      <artifactId>cdi-api</artifactId>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.validation</groupId>
@@ -234,10 +234,10 @@
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-spellchecker</artifactId>
     </dependency>
-    <!--<dependency>
+    <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-snowball</artifactId>
-    </dependency>-->
+    </dependency>
     <dependency>
       <groupId>org.jdom</groupId>
       <artifactId>jdom</artifactId>
@@ -348,22 +348,29 @@
     <dependency>
       <groupId>org.springframework.social</groupId>
       <artifactId>spring-social-linkedin</artifactId>
-      <version>1.0.0.BUILD</version>
+      <version>1.0.0.RC1</version>
     </dependency>
-
 
     <dependency>
       <groupId>org.springframework.social</groupId>
       <artifactId>spring-social-facebook</artifactId>
-      <version>1.0.0.RELEASE</version>
+      <version>1.0.1.RELEASE</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-crypto</artifactId>
-      <version>3.1.0.RC3</version>
+      <version>3.1.0.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.forgerock.opendj</groupId>
+      <artifactId>opendj-server</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sleepycat</groupId>
+      <artifactId>je</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
@@ -381,6 +388,7 @@
           <exclude>**/*.tar.gz</exclude>
           <exclude>**/*.tar.bz2</exclude>
           <exclude>**/*.sql</exclude>
+          <exclude>opendj/**</exclude>
         </excludes>
       </testResource>
       <testResource>
@@ -396,6 +404,7 @@
           <include>**/*.tar.gz</include>
           <include>**/*.tar.bz2</include>
           <include>**/*.sql</include>
+          <include>opendj/**</include>
         </includes>
       </testResource>
     </testResources>
@@ -408,6 +417,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <skipTests>false</skipTests>
+		  <argLine>-XX:MaxPermSize=512m</argLine>
           <systemProperties>
             <property>
               <name>java.awt.headless</name>
